Add custom file actions
Issue #504

Allows custom definition of actions which can be referenced in both the UI and in pipelines (to run at the end). See documentation for more.

* Updated documentation
* Server
* UI
* Swagger
* New language

Also done:
* Fix swagger.json request
* Disable file action buttons when no files are selected.
