# packages/server/src/classes/user-options.js
@@ -41,4 +41,36 @@ module.exports = class UserOptions {
       return await this.local.afterScan(fileInfo);
     }
   }
+
+  /**
+   * Returns a list of all the actions
+   * @returns {Action[]}
+   */
+  actions() {
+    return this.local && this.local.actions && Array.isArray(this.local.actions)
+      ? this.local.actions
+      : [];
+  }
+
+  /**
+   * Returns a named action
+   * @param {string} actionName
+   * @returns {Action}
+   */
+  action(actionName) {
+    const matches = this.actions().filter(a => a.name === actionName);
+    if (matches.length === 0) {
+      throw new Error(`No matching action: '${actionName}'`);
+    } else if (matches.length > 1) {
+      throw new Error(`Multiple matching actions: '${actionName}'`);
+    }
+    const action = matches[0];
+    if (!('execute' in action)) {
+      throw new Error(`Action '${actionName}' has no execute method`);
+    }
+    if (!(action.execute instanceof Function)) {
+      throw new Error(`${actionName}.execute() is not a function`);
+    }
+    return action;
+  }
 };
